[package]
name = "auto_into"
version = "0.1.0"
edition = "2021"
description = "a rust macro that provides (slight) ergonomics for writing functions"
authors = ["João Vitor Costa Marcenes <jvcmv.jvcmarcenes@gmail.com>"]
repository = "https://github.com/jvcmarcenes/auto_into"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.104", features = ["full"] }
